Add Noise Generation and audio processing

--- a/LMS_filter.ipynb
+++ b/LMS_filter.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import scipy.io.wavfile as wav\n",
     "\n",
     "# LMS Filter Configuration\n",
     "filter_length = 8  \n",
@@ -41,7 +42,124 @@
     "    # Update filter weights using LMS algorithm\n",
     "    filter_weights += learning_rate * estimated_clean * noise_buffer\n",
     "\n",
-    "    return estimated_noise, estimated_clean"
+    "    return estimated_noise, estimated_clean\n",
+    "\n",
+    "def add_noise(clean_audio, noise_type=\"white\", snr_db=10):\n",
+    "    \"\"\"\n",
+    "    Add noise to clean audio signal.\n",
+    "    \n",
+    "    Args:\n",
+    "        clean_audio: Clean audio signal\n",
+    "        noise_type: Type of noise (\"white\" or \"brown\")\n",
+    "        snr_db: Signal-to-noise ratio in dB\n",
+    "    \n",
+    "    Returns:\n",
+    "        tuple: (noisy_audio, noise)\n",
+    "    \"\"\"\n",
+    "    if noise_type == \"white\":\n",
+    "        noise = np.random.randn(len(clean_audio))  \n",
+    "    elif noise_type == \"brown\":\n",
+    "        noise = np.cumsum(np.random.randn(len(clean_audio)))\n",
+    "        noise -= np.mean(noise)\n",
+    "\n",
+    "    # Calculate scaling factor for desired SNR\n",
+    "    clean_power = np.mean(clean_audio**2)\n",
+    "    noise_power = np.mean(noise**2)\n",
+    "    scaling_factor = np.sqrt(clean_power / (noise_power * (10 ** (snr_db / 10))))\n",
+    "    scaled_noise = noise * scaling_factor\n",
+    "\n",
+    "    return clean_audio + scaled_noise, scaled_noise\n",
+    "\n",
+    "def process_audio_file(noisy_filename, noise_filename):\n",
+    "    \"\"\"\n",
+    "    Process audio file using LMS filter.\n",
+    "    \n",
+    "    Args:\n",
+    "        noisy_filename: Path to noisy audio file\n",
+    "        noise_filename: Path to noise reference file\n",
+    "    \n",
+    "    Returns:\n",
+    "        dict: Processing results including filtered audio\n",
+    "    \"\"\"\n",
+    "    global filter_weights, noise_buffer\n",
+    "    \n",
+    "    # Reset filter state\n",
+    "    filter_weights.fill(0)\n",
+    "    noise_buffer.fill(0)\n",
+    "    \n",
+    "    # Load audio files\n",
+    "    sample_rate, noisy_audio = wav.read(noisy_filename)\n",
+    "\n",
+    "    # Convert to float\n",
+    "    if noisy_audio.dtype == np.int16:\n",
+    "        noisy_audio = noisy_audio.astype(np.float32) / 32768.0\n",
+    "\n",
+    "    noise = np.load(noise_filename)\n",
+    "\n",
+    "    # Initialize output arrays\n",
+    "    filtered_audio = np.zeros_like(noisy_audio)\n",
+    "    filter_output = np.zeros_like(noisy_audio)\n",
+    "    \n",
+    "    # Process each sample with the LMS filter\n",
+    "    for i in range(len(noisy_audio)):\n",
+    "        estimated_noise, estimated_clean = lms_filter_sample(noise[i], noisy_audio[i])\n",
+    "        filter_output[i] = estimated_noise\n",
+    "        filtered_audio[i] = estimated_clean\n",
+    "    \n",
+    "    # Save filtered audio\n",
+    "    filtered_filename = \"LMS_denoised.wav\" \n",
+    "    filtered_audio_int = (filtered_audio * 32767).astype(np.int16)\n",
+    "    wav.write(filtered_filename, sample_rate, filtered_audio_int)\n",
+    "    \n",
+    "    print(f\"\\nOutput files created:\")\n",
+    "    print(f\"- {filtered_filename}\")\n",
+    "    \n",
+    "    return {\n",
+    "        'noisy_audio': noisy_audio,\n",
+    "        'filtered_audio': filtered_audio,\n",
+    "        'noise': noise,\n",
+    "        'sample_rate': sample_rate\n",
+    "    }\n",
+    "\n",
+    "def compare_performance(clean_filename, noisy_audio, filtered_audio):\n",
+    "    \"\"\"\n",
+    "    Compare performance between original noisy audio and filtered audio.\n",
+    "    \n",
+    "    Args:\n",
+    "        clean_filename: Path to clean reference audio\n",
+    "        noisy_audio: Noisy audio signal\n",
+    "        filtered_audio: Filtered audio signal\n",
+    "    \n",
+    "    Returns:\n",
+    "        dict: Performance metrics including SNR improvements\n",
+    "    \"\"\"\n",
+    "    sample_rate, clean_audio = wav.read(clean_filename)\n",
+    "\n",
+    "    if clean_audio.dtype == np.int16:\n",
+    "        clean_audio = clean_audio.astype(np.float32) / 32768.0\n",
+    "\n",
+    "    # Calculate noise power\n",
+    "    noise_power_original = np.mean((noisy_audio - clean_audio) ** 2)\n",
+    "    noise_power_filtered = np.mean((filtered_audio - clean_audio) ** 2)\n",
+    "    \n",
+    "    # Calculate SNR values\n",
+    "    signal_power = np.mean(clean_audio ** 2)\n",
+    "    snr_original = 10 * np.log10(signal_power / noise_power_original)\n",
+    "    snr_filtered = 10 * np.log10(signal_power / noise_power_filtered)\n",
+    "    improvement_db = snr_filtered - snr_original\n",
+    "    \n",
+    "    # Display results\n",
+    "    print(f\"\\nPerformance Metrics:\")\n",
+    "    print(f\"Original SNR: {snr_original:.2f} dB\")\n",
+    "    print(f\"Filtered SNR: {snr_filtered:.2f} dB\")\n",
+    "    print(f\"SNR Improvement: {improvement_db:.2f} dB\")\n",
+    "    \n",
+    "    return {\n",
+    "        'clean_audio': clean_audio,\n",
+    "        'snr_original': snr_original,\n",
+    "        'snr_filtered': snr_filtered,\n",
+    "        'improvement_db': improvement_db\n",
+    "    }"
    ]
   }
  ],
