complete the filter

--- a/LMS_filter.ipynb
+++ b/LMS_filter.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "import numpy as np\n",
     "import scipy.io.wavfile as wav\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# LMS Filter Configuration\n",
     "filter_length = 8  \n",
@@ -159,7 +160,42 @@
     "        'snr_original': snr_original,\n",
     "        'snr_filtered': snr_filtered,\n",
     "        'improvement_db': improvement_db\n",
-    "    }"
+    "    }\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    \"\"\"\n",
+    "    Main execution flow for LMS audio filtering demonstration.\n",
+    "    \"\"\"\n",
+    "    clean_filename = \"mono_1_.wav\"\n",
+    "    \n",
+    "    print(\"LMS Audio Filter Demo\")\n",
+    "    print(\"=\" * 30)\n",
+    "    print(\"Adding noise to clean audio...\")\n",
+    "    \n",
+    "    # Load clean audio\n",
+    "    sample_rate, clean_audio = wav.read(clean_filename)\n",
+    "    if clean_audio.dtype == np.int16:\n",
+    "        clean_audio = clean_audio.astype(np.float32) / 32768.0\n",
+    "\n",
+    "    # Add noise to create test scenario\n",
+    "    noisy_audio, noise = add_noise(clean_audio, noise_type=\"white\", snr_db=10)\n",
+    "\n",
+    "    # Save noisy audio and noise reference\n",
+    "    wav.write(\"LMS_filter_noisy.wav\", sample_rate, (noisy_audio * 32767).astype(np.int16))\n",
+    "    np.save(\"LMS_filter_noise.npy\", noise)\n",
+    "    print(\"Created noisy audio and noise reference files\")\n",
+    "\n",
+    "    # Process audio with LMS filter\n",
+    "    print(\"\\nProcessing audio with LMS filter...\")\n",
+    "    results = process_audio_file(\"LMS_filter_noisy.wav\", \"LMS_filter_noise.npy\")\n",
+    "    filtered_audio = results['filtered_audio']\n",
+    "   \n",
+    "    # Compare performance\n",
+    "    print(\"\\nEvaluating filter performance...\")\n",
+    "    comparison = compare_performance(clean_filename, results['noisy_audio'], filtered_audio)\n",
+    "    results.update(comparison)\n",
+    "\n",
+    "    print(\"\\nDemo completed successfully!\")"
    ]
   }
  ],
