--- a/LMS_filter.ipynb
+++ b/LMS_filter.ipynb
@@ -197,6 +197,57 @@
     "\n",
     "    print(\"\\nDemo completed successfully!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b55d4425",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#ploting the results\n",
+    "time = np.arange(len(clean_audio)) / sample_rate\n",
+    "plt.figure(figsize=(15, 10))\n",
+    "# Waveforms\n",
+    "plt.subplot(3, 2, 1)\n",
+    "plt.plot(time, clean_audio)\n",
+    "plt.title('Clean Audio - Waveform')\n",
+    "plt.xlabel('Time [s]')\n",
+    "plt.ylabel('Amplitude')\n",
+    "plt.subplot(3, 2, 3)\n",
+    "plt.plot(time, noisy_audio)\n",
+    "plt.title('Noisy Audio - Waveform')\n",
+    "plt.xlabel('Time [s]')\n",
+    "plt.ylabel('Amplitude')\n",
+    "plt.subplot(3, 2, 5)\n",
+    "plt.plot(time, filtered_audio)\n",
+    "plt.title('Filtered Audio - Waveform')\n",
+    "plt.xlabel('Time [s]')\n",
+    "plt.ylabel('Amplitude')\n",
+    "# Spectrograms\n",
+    "plt.subplot(3, 2, 2)\n",
+    "plt.specgram(clean_audio, Fs=sample_rate, NFFT=1024, noverlap=512, cmap='viridis')\n",
+    "plt.title('Clean Audio - Spectrogram')\n",
+    "plt.xlabel('Time [s]')\n",
+    "plt.ylabel('Frequency [Hz]')\n",
+    "plt.colorbar(format='%+2.0f dB')\n",
+    "plt.subplot(3, 2, 4)\n",
+    "plt.specgram(noisy_audio, Fs=sample_rate, NFFT=1024, noverlap=512, cmap='viridis')\n",
+    "plt.title('Noisy Audio - Spectrogram')\n",
+    "plt.xlabel('Time [s]')\n",
+    "plt.ylabel('Frequency [Hz]')\n",
+    "plt.colorbar(format='%+2.0f dB')\n",
+    "plt.subplot(3, 2, 6)\n",
+    "plt.specgram(filtered_audio, Fs=sample_rate, NFFT=1024, noverlap=512, cmap='viridis')\n",
+    "plt.title('Filtered Audio - Spectrogram')\n",
+    "plt.xlabel('Time [s]')\n",
+    "plt.ylabel('Frequency [Hz]')\n",
+    "plt.colorbar(format='%+2.0f dB')\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
